Update method EvaluationTest.precisionRecallCurve